--- a/BullCowGame/BullCowGame.vcxproj
+++ b/BullCowGame/BullCowGame.vcxproj
@@ -142,11 +142,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FunctionBullCowGame.cpp" />
+    <ClCompile Include="BullCowGame.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HeaderBullCowGame.h" />
+    <ClInclude Include="BullCowGame.h" />
+    <ClInclude Include="Include.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
